Library/AXL(Library)/C, C++/AXDev.h

//========= Sensor drive API( Read carefully: Available only PI , No function in QI) =========================================================================
// Set mark signal( used in sensor positioning drive)
DWORD    __stdcall AxmSensorSetSignal(long lAxisNo, DWORD uLevel);
// Verify mark signal( used in sensor positioning drive)
DWORD    __stdcall AxmSensorGetSignal(long lAxisNo, DWORD *upLevel);
// Verify mark signal( used in sensor positioning drive)state
DWORD    __stdcall AxmSensorReadSignal(long lAxisNo, DWORD *upStatus);
// Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop. Applied motion is started upon the start of API, and escapes from the API after the motion is completed.
DWORD    __stdcall AxmSensorMovePos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lMethod);
// Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop. Applied motion is started upon the start of API, then escapes from the API immediately without waiting until the motion is completed.
DWORD    __stdcall AxmSensorStartMovePos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lMethod);
// Return record of origin search progress step.
// *lpStepCount      : Number of step(Be recorded)
// *upMainStepNumber : Array point of 'MainStepNumber ' information(Be recorded)
// *upStepNumber     : Array point of 'StepNumber ' information(Be recorded)
// *upStepBranch     : Array point of branch information by step(Be recorded)
// ※ Caution : Number of array should be fixed 50.
DWORD    __stdcall AxmHomeGetStepTrace(long lAxisNo, long *lpStepCount, DWORD *upMainStepNumber, DWORD *upStepNumber, DWORD *upStepBranch);
//======= Additive home search (Applicable to PI-N804/404  only) =================================================================================

// Set home setting parameters of axis specified by user. (Use exclusive-use register for QI chip).
// uZphasCount : Z phase count after home completion. (0 - 15)
// lHomeMode   : Home setting mode( 0 - 12)
// lClearSet   : Select use of position clear and remaining pulse clear (0 - 3)
//               0: No use of position clear, no use of remaining pulse clear
//               1: use of position clear, no use of remaining pulse clear
//               2: No use of position clear, use of remaining pulse clear
//               3: use of position clear, use of remaining pulse clear
// dOrgVel : Set Org  Speed related home
// dLastVel: Set Last Speed related home
DWORD    __stdcall AxmHomeSetConfig(long lAxisNo, DWORD uZphasCount, long lHomeMode, long lClearSet, double dOrgVel, double dLastVel, double dLeavePos);
// Return home setting parameters of axis specified by user.
DWORD    __stdcall AxmHomeGetConfig(long lAxisNo, DWORD *upZphasCount, long *lpHomeMode, long *lpClearSet, double *dpOrgVel, double *dpLastVel, double *dpLeavePos); //KKJ(070215)
// Start home search of axis specified by user
// Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
// If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
// Move direction      : CW when Vel value is positive, CCW when negative.
DWORD    __stdcall AxmHomeSetMoveSearch(long lAxisNo, double dVel, double dAccel, double dDecel);
// Start home return of axis specified by user.
// Set when lHomeMode is used: set 0 - 12
// If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
// Move direction      : CW when Vel value is positive, CCW when negative.
DWORD    __stdcall AxmHomeSetMoveReturn(long lAxisNo, double dVel, double dAccel, double dDecel);
// Home separation of axis specified by user is started.
// Move direction      : CW when Vel value is positive, CCW when negative.
DWORD    __stdcall AxmHomeSetMoveLeave(long lAxisNo, double dVel, double dAccel, double dDecel);
// User start home search of multi-axis specified by user.
// Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
// If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
// Move direction      : CW when Vel value is positive, CCW when negative.
DWORD    __stdcall AxmHomeSetMultiMoveSearch(long lArraySize, long *lpAxesNo, double *dpVel, double *dpAccel, double *dpDecel);
//Set move velocity profile mode of specific coordinate system.
// (caution : Available to use only after axis mapping)
//ProfileMode : '0' - symmetry Trapezoid
//              '1' - asymmetric Trapezoid
//              '2' - symmetry Quasi-S Curve
//              '3' - symmetry S Curve
//              '4' - asymmetric S Curve
DWORD    __stdcall AxmContiSetProfileMode(long lCoord, DWORD uProfileMode);
// Return move velocity profile mode of specific coordinate system.
DWORD    __stdcall AxmContiGetProfileMode(long lCoord, DWORD *upProfileMode);
//========== Reading group for input interrupt occurrence flag
// Reading the interrupt occurrence state by bit unit in specified input contact module and Offset position of Interrupt Flag Register
DWORD    __stdcall AxdiInterruptFlagReadBit(long lModuleNo, long lOffset, DWORD *upValue);
// Reading the interrupt occurrence state by byte unit in specified input contact module and Offset position of Interrupt Flag Register
DWORD    __stdcall AxdiInterruptFlagReadByte(long lModuleNo, long lOffset, DWORD *upValue);
// Reading the interrupt occurrence state by word unit in specified input contact module and Offset position of Interrupt Flag Register
DWORD    __stdcall AxdiInterruptFlagReadWord(long lModuleNo, long lOffset, DWORD *upValue);
// Reading the interrupt occurrence state by double word unit in specified input contact module and Offset position of Interrupt Flag Register
DWORD    __stdcall AxdiInterruptFlagReadDword(long lModuleNo, long lOffset, DWORD *upValue);
// Reading the interrupt occurrence state by bit unit in entire input contact module and Offset position of Interrupt Flag Register
DWORD    __stdcall AxdiInterruptFlagRead(long lOffset, DWORD *upValue);
//========= API related log ==========================================================================================
// This API sets or resets in order to monitor the API execution result of set axis in EzSpy.
// uUse : use or not use => DISABLE(0), ENABLE(1)
DWORD    __stdcall AxmLogSetAxis(long lAxisNo, DWORD uUse);
// This API verifies if the API execution result of set axis is monitored in EzSpy.
DWORD    __stdcall AxmLogGetAxis(long lAxisNo, DWORD *upUse);
//==Log

// Set whether to log output to EzSpy of specified input channel
DWORD    __stdcall AxaiLogSetChannel(long lChannelNo, DWORD uUse);
// Verify whether to log output to EzSpy of specified input channel
DWORD    __stdcall AxaiLogGetChannel(long lChannelNo, DWORD *upUse);
// Set whether to log output in EzSpy of specified output channel
DWORD    __stdcall AxaoLogSetChannel(long lChannelNo, DWORD uUse);
// Verify whether log output is done in EzSpy of specified output channel.
DWORD    __stdcall AxaoLogGetChannel(long lChannelNo, DWORD *upUse);
// Set whether execute log output on EzSpy of specified module
DWORD    __stdcall AxdLogSetModule(long lModuleNo, DWORD uUse);
// Verify whether execute log output on EzSpy of specified module
DWORD    __stdcall AxdLogGetModule(long lModuleNo, DWORD *upUse);
// Verify whether to firmware version designated RTEX board.
//DWORD    __stdcall AxlGetFirmwareVersion(long lBoardNo, PTCHAR szVersion);
// Sent to firmware designated board.
DWORD    __stdcall AxlSetFirmwareCopy(long lBoardNo, WORD *wData, WORD *wCmdData);
// Execute Firmware update to designated board.
DWORD    __stdcall AxlSetFirmwareUpdate(long lBoardNo);
// Verify whether currently RTEX status Initialized.
DWORD    __stdcall AxlCheckStatus(long lBoardNo, DWORD* dwStatus);
// Execute universal command designated axis of board.
DWORD    __stdcall AxlRtexUniversalCmd(long lBoardNo, WORD wCmd, WORD wOffset, WORD *wData);
// Execute RTEX communication command designated axis.
DWORD    __stdcall AxmRtexSlaveCmd(long lAxisNo, DWORD dwCmdCode, DWORD dwTypeCode, DWORD dwIndexCode, DWORD dwCmdConfigure, DWORD dwValue);
// Verify whether Result of RTEX communication command designated axis.
DWORD    __stdcall AxmRtexGetSlaveCmdResult(long lAxisNo, DWORD* dwIndex, DWORD *dwValue);
// Check the result of the RTEX communication command executed on the specified axis. PCIE-Rxx04-RTEX only
DWORD    __stdcall AxmRtexGetSlaveCmdResultEx(long lAxisNo, DWORD* dwpCommand, DWORD* dwpType, DWORD* dwpIndex, DWORD *dwpValue);
// Verify whether RTEX status information designated axis.
DWORD    __stdcall AxmRtexGetAxisStatus(long lAxisNo, DWORD *dwStatus);
// Verify whether RTEX communication return information designated axis.(Actual position, Velocity, Torque)
DWORD    __stdcall AxmRtexGetAxisReturnData(long lAxisNo,  DWORD *dwReturn1, DWORD *dwReturn2, DWORD *dwReturn3);
// Verify whether currently status information of RTEX slave axis.(mechanical, Inposition and etc)
DWORD    __stdcall AxmRtexGetAxisSlaveStatus(long lAxisNo,  DWORD *dwStatus);
// Enter the universal network command of specified MLII slave axis.
DWORD    __stdcall AxmSetAxisCmd(long lAxisNo, DWORD* tagCommand);
// Verifying result of universal network command of specified MLII slave axis.
DWORD    __stdcall AxmGetAxisCmdResult(long lAxisNo, DWORD* tagCommand);
// The specified SID Write the result of the network command to the slave module and return it.
DWORD   __stdcall AxdSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
DWORD   __stdcall AxaSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
DWORD   __stdcall AxcSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
// Verify DPRAM data.
DWORD    __stdcall AxlGetDpRamData(long lBoardNo, WORD wAddress, DWORD* dwpRdData);
// Verify DPRAM data in Word unit.
DWORD    __stdcall AxlBoardReadDpramWord(long lBoardNo, WORD wOffset, DWORD* dwpRdData);
// Set DPRAM data in Word unit.
DWORD   __stdcall AxlBoardWriteDpramWord(long lBoardNo, WORD wOffset, DWORD dwWrData);